--- a/Assignment 1/Assign1.ipynb
+++ b/Assignment 1/Assign1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "214beb6d",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "# Food Delivery Time Prediction - Phase 1: Data Collection and Exploratory Data Analysis (EDA)\n",
+    "# Food Delivery Time Prediction \n",
     "\n",
     "# Step 1: Data Import and Preprocessing\n",
     "\n",
@@ -125,14 +125,6 @@
     "# Save the preprocessed dataframe for further steps\n",
     "df.to_csv('Food_Delivery_Time_Prediction_preprocessed.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3286173",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
